// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom: ol 1`] = `
<ol
  class="custom-list-item"
  data-name="yozora-list"
  style="color:orange"
  type="a"
>
  <li>
    apple
  </li>
  <li>
    banana
  </li>
  <li>
    cat
  </li>
</ol>
`;

exports[`snapshot custom: ul 1`] = `
<ul
  class="custom-list-item"
  data-name="yozora-list"
  style="color:orange"
  type="a"
>
  <li>
    apple
  </li>
  <li>
    banana
  </li>
  <li>
    cat
  </li>
</ul>
`;

exports[`snapshot default: ol 1`] = `
<ol
  class="yozora-list"
  type="a"
>
  <li>
    apple
  </li>
  <li>
    banana
  </li>
  <li>
    cat
  </li>
</ol>
`;

exports[`snapshot default: ul 1`] = `
<ul
  class="yozora-list"
  type="a"
>
  <li>
    apple
  </li>
  <li>
    banana
  </li>
  <li>
    cat
  </li>
</ul>
`;
